--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -10,7 +10,8 @@
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
-  display: none;
+  display: flex;
+  visibility: hidden;
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, .5);
@@ -20,4 +21,5 @@
   bottom: 0;
   right: 0;
   z-index: 10;
+  transition: visibility 0s, opacity 0.5s linear;
 }
