Коммит для выявления ошибки наставником

--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,16 @@
   cursor: pointer;
 }
 
+.popup__button_disabled {
+  border:  1px rgba(0, 0, 0, .2) solid;
+  background-color: transparent;
+  color: rgba(0, 0, 0, .2);
+}
+.popup__button_disabled:hover {
+  background-color: transparent;
+  cursor: default;
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
