Готовая проектная работа. Добавлена валидация формы, работа с данными с сервера, возможность менять аватар профиля

--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,5 +1,5 @@
 .profile__image {
-  background-image: url('../../../images/avatar.jpg');
+  background: url('../../../images/avatar.jpg');
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -8,6 +8,22 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.profile__image-button {
+  position: absolute;
+  inset: 0;
+  background: url('../../../images/edit-icon.svg') center center/cover no-repeat;
+  background-size: 26px 26px;
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: 0.3s ease;
+  opacity: 0; 
+}
+
+.profile__image:hover .profile__image-button {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
